# ml-outtakes.github.io

./: .gitignore  Gemfile  LICENSE  README.md  _config.yml  index.md
_articles/2025-09-28-reproducible-flax-orbax-grain/: compare.py  index.md  pyproject.toml  train.py
_layouts/: article.html  main.html
assets/js/: hll.js
